# cs-reminibot

./: .flaskenv  .gitignore  .project  =16.x  Dockerfile  Dockerfile.flask  Dockerfile.node  README.md  calibrate_vision.sh  captured_video.avi  diff.txt  docker-compose.yml  docker_build.txt  docker_run.txt  git_token.txt  locate_tags_vision.sh  minibot_server.py  package-lock.json  package.json  run_BS.sh  run_BS_windows.sh  run_vision.sh  script.sh
.history/: package_20230325110557.json
basestation/: 0.calib  ChatbotWrapper.py  Dockerfile  READMERIGHTNOW.md  WebSocket_Test_index.html  __init__.py  _temp.py  base_station.py  base_station_interface.py  base_station_interface_flask.py  basestation_requirements_shared.txt  bot.py  chatbot_test.py  config.py  flask_app.py  flask_app_old.py  flask_db.py  gfortran  main.py  program.db  requirements.in  requirements.txt  routes.py  tag_insns.json  user_database.py
buddybot/: .laser_tag.py.swp  .main_app.py.swp  .vimrc  Move.cs  README.txt  \  camera_stream_pi.py  camera_stream_windows.py  camera_test.py  drive.py  laser_tag.py  (+1 more)
vision/old-system/: 1.calib  CMakeCache.txt  CMakeLists.txt  Makefile  _readCoordinates.py.swp  calibrate_cameras.cc  calibrate_cameras.x  get_key.c  get_key.py  locate_cameras.x  locate_tags.cc  locate_tags.x  test.py  testReadCoordinates.py
vision/old-system/Test/: CMakeCache.txt  CMakeLists.txt  Makefile  Test
vision/old-system/apriltag/: apriltag_quad_thresh.c  tag25h9.c  tag36artoolkit.c  tag36h10.h  tag36h11.c  tag36h11.h
vision/old-system/apriltag/common/: g2d.h  image_u8x3.h
(+863 files in other folders)
